summary: Scopri le novità della gestione dei cluster ONTAP on-premise in BlueXP. 
---
= Novità dei cluster ONTAP on-premise
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Scopri le novità della gestione dei cluster ONTAP on-premise in BlueXP.



== 30 luglio 2023



=== Creare volumi FlexGroup

Se si gestisce un cluster con un connettore, è ora possibile creare volumi FlexGroup utilizzando l'API BlueXP.

* https://docs.netapp.com/us-en/bluexp-automation/cm/wf_onprem_flexgroup_ontap_create_vol.html["Scopri come creare un volume FlexGroup"^]
* https://docs.netapp.com/us-en/ontap/flexgroup/definition-concept.html["Scopri cos'è un volume FlexGroup"^]




== 2 luglio 2023



=== Rilevamento cluster da My estate

Ora puoi scoprire i cluster ONTAP on-premise da *Canvas > My estate* selezionando un cluster che BlueXP ha scoperto in base ai cluster ONTAP associati all'indirizzo e-mail per il tuo login BlueXP.

https://docs.netapp.com/us-en/bluexp-ontap-onprem/task-discovering-ontap.html#add-a-pre-discovered-cluster["Scopri come scoprire i cluster dalla pagina My estate"].



== 4 maggio 2023



=== Abilitare il backup e ripristino BlueXP

A partire da ONTAP 9.13.1, è possibile utilizzare Gestione sistema (visualizzazione avanzata) per attivare il backup e il ripristino BlueXP se il cluster è stato rilevato utilizzando un connettore. link:https://docs.netapp.com/us-en/ontap/task_cloud_backup_data_using_cbs.html["Scopri di più sull'attivazione del backup e ripristino BlueXP"^]



=== Aggiornare l'immagine della versione di ONTAP e il firmware dell'hardware
