@@ -44,10 +44,6 @@ Cercare nella Knowledge base di BlueXP articoli utili per la risoluzione dei pro
 +
 Unisciti alla community BlueXP per seguire le discussioni in corso o crearne di nuove.
 
-* Mailto:ng-cloudmanager-feedback@netapp.com[email di feedback]
-+
-Diamo valore al tuo contributo. Invia un feedback per aiutarci a migliorare BlueXP.
-
 
 
 
