@@ -18,6 +18,16 @@ Scopri le novità della gestione dei cluster ONTAP on-premise in BlueXP.
 
 
 
+== 22 aprile 2024
+
+
+
+=== I modelli di volume non sono più supportati
+
+Non è più possibile creare un volume da un modello. Questa azione è stata associata al servizio di correzione BlueXP, che non è più disponibile.
+
+
+
 == 30 luglio 2023
 
 
